...
            </objects>
            <point key="canvasLocation" x="706" y="362"/>
        </scene>
        <!--Choose an Address-->
        <scene sceneID="wQE-ne-TfG">
            <objects>
                <viewController storyboardIdentifier="MapViewController" title="Choose an Address" id="gLt-qP-0cL" customClass="MapViewController" customModule="DoorDashAssignment" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="qc4-xZ-tom">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NHH-7L-OD5">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HrE-uz-8B5">
                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                <color key="backgroundColor" red="1" green="0.0" blue="0.14117647059999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="hUG-1L-bSX"/>
                                </constraints>
                                <state key="normal" title="Confirm Address">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="srX-Cl-baW" kind="show" identifier="mapToRestaurantsList" id="One-EJ-Fwa"/>
                                </connections>
                            </button>
...
